fix prize page spacing

--- a/public/css/prize.css
+++ b/public/css/prize.css
@@ -7,6 +7,6 @@
     max-width: 100%;
     max-height: 100%;
 }
-#bootstrap-override .input-group {
-    margin-bottom: 10px;
+#bootstrap-override .input-group, #bootstrap-override p, #amazon {
+    margin-bottom: 15px;
 }
